# Simulation-haskell

./: CHANGELOG.md  README.md  bot1.txt  bot2.txt  haskell-simulation.cabal
app/: BFS.hs  Bot.hs  BotAgentV2.hs  BotWithKid.hs  Dirt.hs  Element.hs  Environment.hs  Kid.hs  Main.hs  Obstacle.hs  Simulation.hs  Utils.hs
app/Core/: Bfs.hs  Utils.hs
app/Src/: Bot.hs  BotAgentV2.hs  BotWithKid.hs  Cell.hs  Dirt.hs  Element.hs  Kid.hs  Obstacle.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
